# wakalaka-rs

./: .env.example  .gitignore  Cargo.toml  Config.toml  LICENSE  README.md  docker-compose.yml.example
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: rust.yml
migrations/: 20240111220437_guilds.sql  20240111220450_guild_users.sql  20240111220507_guild_user_infractions.sql  20240111220522_guild_channels.sql  20240112171513_guilds.sql  20240112172002_users.sql  20240112173818_channels.sql  20240113130114_infractions.sql  20240113130121_suggestions.sql  20240113131031_members.sql  20240113131031_users.sql  20240122093632_guilds.sql  20240122094452_guild_members.sql  20240122095516_guild_channels.sql  20240123185450_restricted_guild_channels.sql  20240128091311_restricted_guilds.sql  20240209140156_restricted_users.sql  20240212192118_users.sql  20240212192126_guilds.sql  20240212192135_restricted_users.sql  20240212192137_restricted_guilds.sql  20240212192156_infractions.sql  20240212192156_violations.sql  20240212192156_warnings.sql
src/: framework.rs  main.rs  uses.rs
src/booru/: aibooru.rs  mod.rs
src/cogs/: embed.rs  framework.rs  mod.rs
src/cogs/booru/: aibooru.rs  mod.rs
src/cogs/event/: message.rs  mod.rs  reaction_add.rs  ready.rs
src/cogs/util/: mod.rs
src/commands/: mod.rs
src/commands/core/: mod.rs  restart.rs  restrict.rs  shutdown.rs  unrestrict.rs
src/commands/fun/: eightball.rs  flip.rs  hug.rs  mod.rs  roll.rs
src/commands/general/: avatar.rs  mod.rs
src/commands/info/: about.rs  app.rs  guild.rs  info.rs  invite.rs  mod.rs  ping.rs  user.rs
src/commands/manager/: mod.rs  nick.rs  slowmode.rs
src/commands/misc/: avatar.rs  mod.rs  suggest.rs
src/commands/moderation/: mod.rs
src/commands/moderator/: mod.rs  purge.rs  unwarn.rs  warn.rs
src/commands/web/: mod.rs
src/config/: mod.rs
src/core/: config.rs  embed.rs  event.rs  framework.rs  mod.rs  strings.rs
src/core/event/: message.rs  mod.rs  reaction_add.rs  ready.rs
src/database/: checks.rs  guild_channels.rs  guild_members.rs  guilds.rs  infractions.rs  members.rs  mod.rs  restricted_guild_channels.rs  restricted_guilds.rs  restricted_users.rs  suggestions.rs  users.rs
src/database/queries/: guilds.rs  infractions.rs  mod.rs  restricted_guilds.rs  restricted_users.rs  users.rs  violations.rs
src/events/: cache_ready.rs  interaction_create.rs  mod.rs  ready.rs
src/framework/: mod.rs  setup.rs
src/handlers/: mod.rs  post_command.rs  setup.rs
src/helpers/: mod.rs
src/integrations/: mod.rs
src/modules/: mod.rs
src/options/: command_check.rs  mod.rs  on_error.rs  post_command.rs
src/util/: config.rs  files.rs  mod.rs  settings.rs  strings.rs  uses.rs
src/utility/: buttons.rs  embeds.rs  guilds.rs  messages.rs  mod.rs  roles.rs  users.rs
src/utils/: environment.rs  mod.rs
wakalaka-commands/: Cargo.toml
wakalaka-commands/src/: lib.rs
wakalaka-commands/src/core/: mod.rs
wakalaka-commands/src/core/restrict/: guild.rs  mod.rs  user.rs
wakalaka-commands/src/core/unrestrict/: guild.rs  mod.rs  user.rs
wakalaka-commands/src/fun/: eightball.rs  flip.rs  hug.rs  roll.rs
wakalaka-commands/src/info/: about.rs  mod.rs
wakalaka-commands/src/info/lookup/: guild.rs  mod.rs  user.rs
wakalaka-commands/src/manager/: nick.rs  slowmode.rs
wakalaka-commands/src/manager/emojis/: create.rs  delete.rs  edit.rs  mod.rs
wakalaka-commands/src/manager/purge/: after.rs  around.rs  before.rs  mod.rs
wakalaka-commands/src/manager/roles/: add.rs  create.rs  delete.rs  edit.rs  mod.rs  remove.rs
wakalaka-commands/src/manager/stickers/: create.rs  delete.rs  edit.rs  mod.rs
wakalaka-commands/src/moderator/: unwarn.rs  warn.rs
wakalaka-core/: Cargo.toml
wakalaka-core/src/: checks.rs  constants.rs  consts.rs  envars.rs  envs.rs  lib.rs  options.rs  types.rs
wakalaka-core/src/accessors/: channels.rs  emojis.rs  guilds.rs  mod.rs  roles.rs  stickers.rs  users.rs
wakalaka-core/src/builders/: messages.rs  mod.rs  replies.rs  responses.rs  select_menu_options.rs
wakalaka-core/src/converters/: formats.rs  mod.rs
wakalaka-database/: Cargo.toml
wakalaka-database/src/: checks.rs  lib.rs
wakalaka-database/src/queries/: guilds.rs  restricted_guilds.rs  restricted_users.rs  users.rs  warnings.rs
wakalaka-db/: Cargo.toml
wakalaka-db/src/: checks.rs  guilds.rs  infractions.rs  lib.rs  restricted_guilds.rs  restricted_users.rs  users.rs
wakalaka-db/src/queries/: guilds.rs  infractions.rs  mod.rs  restricted_guilds.rs  restricted_users.rs  users.rs  warnings.rs
wakalaka-events/: Cargo.toml
wakalaka-events/src/: lib.rs
wakalaka-events/src/category/: category_create.rs  create.rs  delete.rs  mod.rs
wakalaka-events/src/channel/: channel_create.rs  create.rs  delete.rs
wakalaka-events/src/guild/: ban_addition.rs  ban_removal.rs  create.rs  delete.rs  guild_ban_removal.rs  guild_create.rs  guild_role_delete.rs  guild_update.rs  member_addition.rs  member_removal.rs  mod.rs  role_create.rs  role_delete.rs
wakalaka-events/src/interaction/: create.rs  interaction_create.rs  mod.rs
wakalaka-events/src/invite/: create.rs  delete.rs  invite_delete.rs  mod.rs
wakalaka-events/src/ready/: cache.rs  cache_ready.rs  mod.rs
wakalaka-events/src/thread/: create.rs  delete.rs
wakalaka-integrations/: Cargo.toml
wakalaka-integrations/src/: lib.rs
wakalaka-integrations/src/kawaii/: gif.rs  mod.rs
wakalaka-plugins/: Cargo.toml
wakalaka-plugins/src/: lib.rs
wakalaka-utils/: Cargo.toml
wakalaka-utils/src/: lib.rs
wakalaka-utils/src/accessors/: channels.rs  emojis.rs  guilds.rs  mod.rs  roles.rs  stickers.rs  users.rs
wakalaka-utils/src/builders/: messages.rs  mod.rs  replies.rs  responses.rs  select_menu_options.rs
wakalaka-utils/src/converters/: colours.rs  formats.rs  mod.rs  times.rs
wakalaka-utils/src/creators/: embeds.rs  messages.rs  replies.rs  responses.rs
wakalaka-utils/src/factories/: embeds.rs  responses.rs
wakalaka-utils/src/getters/: channels.rs  emojis.rs  guilds.rs  roles.rs  users.rs
(+321 files in other folders)
