[package]
name = "wakalaka"
version = "0.3.0-beta"
authors = ["Kawaxte"]
edition = "2021"
rust-version = "1.77.0"
readme = "README.md"
description = "No-nonsense general-purpose Discord bot written with love in Rust."
repository = "https://github.com/Kawaxte/wakalaka-rs"
license-file = "LICENSE"

[dependencies]
dotenvy = "0.15.7"

[dependencies.chrono]
version = "0.4.35"
default-features = false

[dependencies.poise]
version = "0.6.1"
default-features = false
features = ["cache"]

[dependencies.serde_json]
version = "1.0.115"
default-features = false

[dependencies.uuid]
version = "1.8.0"
default-features = false
features = ["v4"]

[dependencies.serenity]
version = "0.12.1"
default-features = false
features = ["rustls_backend", "cache", "chrono", "framework"]

[dependencies.sqlx]
version = "0.7.4"
default-features = false
"features" = [
    "macros",
    "migrate",
    "chrono",
    "runtime-tokio",
    "runtime-tokio-rustls",
    "sqlite",
    "sqlx-sqlite",
]

[dependencies.tokio]
version = "1.36.0"
default-features = false
features = ["signal", "rt-multi-thread", "time", "fs", "io-std"]

[dependencies.tracing]
version = "0.1.40"
default-features = false

[dependencies.tracing-subscriber]
version = "0.3.18"
default-features = false
features = ["ansi", "fmt", "env-filter"]

[dependencies.rand]
version = "0.8.5"
default-features = false

[dependencies.regex]
version = "1.10.4"
default-features = false

[dependencies.reqwest]
version = "0.12.2"
default-features = false
features = ["default-tls", "blocking", "cookies", "json"]
