[package]
name = "wakalaka"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
lazy_static = "1.4.0"
poise.workspace = true
rand.workspace = true
serenity.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
wakalaka-core.workspace = true
wakalaka-db.workspace = true
wakalaka-utils.workspace = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1

[workspace]
members = ["wakalaka-core", "wakalaka-db", "wakalaka-utils"]

[workspace.package]
version = "0.4.0-beta"
authors = ["Kawaxte"]
edition = "2021"
rust-version = "1.77.2"
readme = "README.md"
description = "A straightforward, modular and extensible Discord application."
repository = "https://github.com/Kawaxte/wakalaka-rs"
license-file = "LICENSE"

[workspace.dependencies]
dotenvy = "0.15.7"
openssl = { version = "0.10.64", default-features = false, features = [
    "vendored",
] }
poise = { version = "0.6.1", default-features = false, features = ["cache"] }
serde_json = "1.0.115"
serenity = { version = "0.12.1", default-features = false, features = [
    "rustls_backend",
    "cache",
    "chrono",
    "framework",
] }
sqlx = { version = "0.7.4", default-features = false, features = [
    "macros",
    "migrate",
    "chrono",
    "runtime-tokio",
    "sqlite",
    "sqlx-sqlite",
] }
tokio = { version = "1.37.0", default-features = false, features = [
    "signal",
    "rt-multi-thread",
    "macros",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "ansi",
    "fmt",
    "env-filter",
] }
uuid = { version = "1.8.0", features = ["v4"] }
rand = { version = "0.8.5", default-features = false, features = [
    "std",
    "std_rng",
] }
regex = { version = "1.10.4", default-features = false, features = ["std"] }
reqwest = { version = "0.12.3", default-features = false, features = [
    "blocking",
    "json",
] }
wakalaka-core = { path = "wakalaka-core" }
wakalaka-db = { path = "wakalaka-db" }
wakalaka-utils = { path = "wakalaka-utils" }
