[package]
name = "wakalaka-commands"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
poise.workspace = true
rand.workspace = true
serenity.workspace = true
tracing.workspace = true
uuid.workspace = true
wakalaka-core.workspace = true
wakalaka-database.workspace = true
