[package]
name = "wakalaka-database"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
poise.workspace = true
serenity.workspace = true
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
wakalaka-core.workspace = true
