[package]
name = "wakalaka-events"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
poise.workspace = true
serenity.workspace = true
sqlx.workspace = true
tracing.workspace = true
wakalaka-core.workspace = true
wakalaka-commands.workspace = true
wakalaka-database.workspace = true