[package]
name = "wakalaka-events"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
poise.workspace = true
serenity.workspace = true
sqlx.workspace = true
tracing.workspace = true
wakalaka-core.workspace = true
wakalaka-commands.workspace = true
wakalaka-database.workspace = true
